Samsung fix + links to lecturers' pages

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                             <hr/>
 
                             <div class="logo-box">
-                                <a href="http://samsung.com/"><img src="images/samsung.png" /></a>
+                                <a href="http://research.samsung.com/srr"><img src="images/samsung.png" /></a>
                             </div>
                             <div class="caption">
-                                <p>Samsung AI Center in Moscow</p>
+                                <p>Samsung R&amp;D Institute Russia</p>
                             </div>
 
                             <hr/>
@@ -315,7 +315,7 @@
                             <img src="photos/welling.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Max Welling</span><br/>
+                            <span class="speaker-name"><a href="https://www.ics.uci.edu/~welling/">Max Welling</a></span><br/>
                             <span class="job-affiliation">University of Amsterdam</span>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
                             <img src="photos/kalchbrenner.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Nal Kalchbrenner</span><br/>
+                            <span class="speaker-name"><a href="https://www.nal.ai/">Nal Kalchbrenner</a></span><br/>
                             <span class="job-affiliation">Google DeepMind</span>
                         </div>
                     </div>
@@ -333,7 +333,7 @@
                             <img src="photos/achille.jpg" />
                         </div>
                         <div class="info">
-                           <span class="speaker-name">Alessandro Achille</span><br/>
+                           <span class="speaker-name"><a href="http://vision.ucla.edu/~alex/">Alessandro Achille</a></span><br/>
                            <span class="job-affiliation">University of California, Los Angeles</span>
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                             <img src="photos/vetrov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Dmitry Vetrov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/staff/dvetrov">Dmitry Vetrov</a></span><br/>
                             Research Professor, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -366,7 +366,7 @@
                             <img src="photos/burnaev.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Evgeny Burnaev</span><br/>
+                            <span class="speaker-name"><a href="http://faculty.skoltech.ru/people/evgenyburnaev">Evgeny Burnaev</a></span><br/>
                             Associate Professor, <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
                             <img src="photos/ulyanov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Dmitry Ulyanov</span><br/>
+                            <span class="speaker-name"><a href="http://sites.skoltech.ru/compvision/members/dmitry-ulyanov/">Dmitry Ulyanov</a></span><br/>
                             PhD student, <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
@@ -435,7 +435,7 @@
                             <img src="photos/ashuha.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Arsenii Ashukha</span><br/>
+                            <span class="speaker-name"><a href="http://ars-ashuha.ru/">Arsenii Ashukha</a></span><br/>
                             <span class="job-title">PhD Candidate</span>, <span class="job-affiliation">University of Amsterdam</span>
                         </div>
                     </div>
@@ -444,7 +444,7 @@
                             <img src="photos/ulyanov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Dmitry Ulyanov</span><br/>
+                            <span class="speaker-name"><a href="http://sites.skoltech.ru/compvision/members/dmitry-ulyanov/">Dmitry Ulyanov</a></span><br/>
                             <span class="job-title">PhD student</span>, <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
