Changed Samsung title back

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <a href="http://research.samsung.com/srr"><img src="images/samsung.png" /></a>
                             </div>
                             <div class="caption">
-                                <p>Samsung R&amp;D Institute Russia</p>
+                                <p>Samsung AI Center in Moscow</p>
                             </div>
 
                             <hr/>
