Got rid of Partners block + some other minor changes

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 	                <ul class="nav navbar-nav navbar-right" id="top-nav">
 	                    <li><a href="./2017/"><strong>Deep|Bayes 2017</strong></a></li>
 	                    <li><a href="#about">About</a></li>
-	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#speakers">People</a></li>
+	                    <li><a href="#schedule">Program</a></li>
 	                    <li><a href="#apply">Apply</a></li>
-	                    <li><a href="#partners">Partners</a></li>
+	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#contact">Contact</a></li>
 	                </ul>
 	            </nav><!-- /.navbar-collapse -->
@@ -185,7 +185,7 @@
 
                 <div class="row">
                         <div class="sub-heading">
-                            <h2>Preliminary dates</h2>
+                            <h2>Dates</h2>
                         </div>
                         <div class="block">
                             <ol>
@@ -204,7 +204,7 @@
             <div class="container">
                 <div class="row">
                     <div class="sub-heading">
-                        <h2>Preliminary Schedule</h2>
+                        <h2>Preliminary Program</h2>
                     </div>
                     <div class="block">
                     <iframe src="https://calendar.google.com/calendar/embed?title=Deep%7CBayes%20Summer%20School&amp;showTitle=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=c2cef5m9artfehdgerhkpsuiqg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FMoscow&amp;dates=20180827%2F20180901" style="border-width:0" width="100%" height="500" frameborder="0" scrolling="no"></iframe> 
@@ -547,29 +547,6 @@
         </section><!-- #call-to-action close -->
 
         <!-- 
-        partners start
-        ==================== -->
-        <section id="partners" class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="heading">
-                        <h2>Partners</h2>
-                    </div>
-                    <div class="block">
-                        We welcome financial support and sponsorship from any industry or academic organization. Funding is needed for:
-                        <ul>
-                        <li>Meals and coffee-break snacks</li>
-                        <li>Travel grants for students outside Moscow</li>
-                        <li>Swag</li>
-                        <li>A networking event</li>
-                        </ul>
-                        Have you any questions regarding the Deep|Bayes School support, please, email us at <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.                        
-                    </div>
-                </div>
-            </div><!-- .container close -->
-        </section><!-- #partner close -->
-
-        <!-- 
         Contacts start
         ==================== -->
         <section id="contact" class="section">
@@ -579,7 +556,7 @@
                         <h2>Contact</h2>
                     </div>
                     <div class="block">
-                        <p>If you have any further questions about our summer school, or you wish to become our partner, please send an email to <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
+                        <p>If you have any further questions about our summer school, feel free to send us an email to <a href="mailto:info@deepbayes.ru">info@deepbayes.ru</a>.</p>
                         <p>You can also follow us on <a href="https://twitter.com/deepbayes_ru">Twitter</a>.</p>
                     </div>
                 </div>
