--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <ol>
                             <li>Strong knowledge of machine learning and familiarity with deep learning.</li>
                             <li>Mathematics: proficiency in linear algebra and probability theory is highly desirable.</li>
-                            <li>Programming: Python and NumPy.</li>
+                            <li>Programming: Python with PyTorch and NumPy.</li>
                             <li>English will be the language of Deep|Bayes 2018 summer school, so participants are expected to be comfortable with technical English.</li>                    
                         </ol>
                     </div>
@@ -170,10 +170,8 @@
                     <div class="block">
                         <ul>
                             <li>Why are Bayesian methods useful (in machine learning and everyday life)? What is randomness, indeed?</li> 
-                            <li>Frameworks and libraries for neural networks. How to code a neural network in 10 minutes?</li>
                             <li>Latent Variable Models. How to train a model able to discover patterns unknown before training?</li> 
                             <li>Scalable probabilistic models. Why can it be useful to turn a probabilistic inference problem into an optimization problem?</li> 
-                            <li>Why do neural networks need an attention mechanism? How to generate a caption for a picture?</li>
                             <li>The connection between Reinforcement Learning and Bayesian methods. How to train stochastic computational graphs?</li>
                             <li>Automatic Dropout rate tuning. Do neural networks overfit? (spoiler: well, yes)</li>
                             <li>Stochastic optimization. How to optimize a function faster than computing  its value at one point?</li>
