More personal pages links

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             <img src="photos/neklyudov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Kirill Neklyudov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191263008">Kirill Neklyudov</a></span><br/>
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                             <img src="photos/rodomanov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Anton Rodomanov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/160993081">Anton Rodomanov</a></span><br/>
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
                             <img src="photos/molchanov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Dmitry Molchanov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/205487138">Dmitry Molchanov</a></span><br/>
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -345,7 +345,7 @@
                             <img src="photos/lobacheva.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Ekaterina Lobacheva</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/131072080">Ekaterina Lobacheva</a></span><br/>
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -354,7 +354,7 @@
                             <img src="photos/struminsky.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Kirill Struminsky</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/165140955">Kirill Struminsky</a></span><br/>
                             <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -381,7 +381,7 @@
                             <img src="photos/neklyudov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Kirill Neklyudov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191263008">Kirill Neklyudov</a></span><br/>
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -390,7 +390,7 @@
                             <img src="photos/molchanov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Dmitry Molchanov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/205487138">Dmitry Molchanov</a></span><br/>
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -532,7 +532,11 @@
                             </li>
                             <li>
                                 <strong>What about lectures live streaming?</strong>
-                                <p>We won’t have live broadcasting, but we will upload video lectures during and after the school.</p>
+                                <p>We won’t have live broadcasting, but we will record lectures and upload them as soon as possible.</p>
+                            </li>
+                            <li>
+                                <strong>Will you help me to obtain Russian visa?</strong>
+                                <p>Yes, we will provide visa invitation letters for those selected participants who need Russian visa.</p>
                             </li>
                             <li>
                                 <strong>I have more questions!</strong>
