Links for organizers

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             <img src="photos/vetrov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Dmitry Vetrov</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/staff/dvetrov">Dmitry Vetrov</a></span><br/>
                             Head of the School 
                         </div>
                     </div>
@@ -414,7 +414,7 @@
                             <img src="photos/chirkova.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Nadezhda Chirkova</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191576735">Nadezhda Chirkova</a></span><br/>
                             <span class="job-affiliation">Organization Manager</span>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                             <img src="photos/lobacheva.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Ekaterina Lobacheva</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/131072080">Ekaterina Lobacheva</a></span><br/>
                             <span class="job-affiliation">Organization Manager</span>
                         </div>
                     </div>
@@ -432,7 +432,7 @@
                             <img src="photos/volzhenina.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Ekaterina Volzhenina</span><br/>
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/216971953">Ekaterina Volzhenina</a></span><br/>
                             <span class="job-affiliation">Organization Manager</span>
                         </div>
                     </div>
