--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         <div class="block">
                             <p>
                             Application is now open!
-                            To apply for the summer school, please fill in <a href="https://goo.gl/forms/6icdP5x6XbvPvVzP2">the form</a>. We kindly suggest you to start working on your application early, as it contains several assignments and questions implying detailed answers. Once the form is submitted, you will be able to edit your application via the link sent to your email.
+                            To apply for the summer school, please fill in <a href="https://goo.gl/forms/6icdP5x6XbvPvVzP2">the form</a>. We kindly suggest you start working on your application early, as it contains several assignments and questions implying detailed answers. Once the form is submitted, you will be able to edit your application via the link sent to your email.
                             </p>
 
                             <p>
