--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <h2>Invited Speakers</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4 col-md-6">
+                    <div class="col-sm-4 col-md-4">
                         <div class="photo">
                             <img src="photos/welling.jpg" />
                         </div>
@@ -247,13 +247,22 @@
                             <span class="job-affiliation">University of Amsterdam</span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md-6">
+                    <div class="col-sm-4 col-md-4">
                         <div class="photo">
                             <img src="photos/achille.jpg" />
                         </div>
                         <div class="info">
                            <span class="speaker-name"><a href="http://vision.ucla.edu/~alex/">Alessandro Achille</a></span><br/>
                            <span class="job-affiliation">University of California, Los Angeles</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="photo">
+                            <img src="photos/filippone.jpg" />
+                        </div>
+                        <div class="info">
+                           <span class="speaker-name"><a href="http://www.eurecom.fr/~filippon/">Maurizio Filippone</a></span><br/>
+                           <span class="job-affiliation">EURECOM</span>
                         </div>
                     </div>
                 </div>
