Closed application + Added Venue

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	                    <li><a href="#schedule">Program</a></li>
 	                    <li><a href="#apply">Apply</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
+	                    <li><a href="#venue">Venue</a></li>
 	                    <li><a href="#contact">Contact</a></li>
 	                </ul>
 	            </nav><!-- /.navbar-collapse -->
@@ -459,16 +460,10 @@
                         </div>
                         <div class="block">
                             <p>
-                            Application is now open!
-                            To apply for the summer school, please fill in <a href="https://goo.gl/forms/6icdP5x6XbvPvVzP2">the form</a>. We kindly suggest you start working on your application early, as it contains several assignments and questions implying detailed answers. Once the form is submitted, you will be able to edit your application via the link sent to your email.
+                            Application is now closed! 
                             </p>
-
                             <p>
-                            Application closes 23:59 <del>April 30th</del> May 15th (Moscow time).
-                            </p>
-
-                            <p>
-                            Participants are expected to have a strong background in machine learning and deep learning. Basic knowledge of Bayesian methods is also desirable. All practical assignments will be implemented using PyTorch, therefore those not familiar with it should learn it beforehand.
+                            Follow us on <a href="https://twitter.com/deepbayes_ru">Twitter</a> to receive updates on school materials (videos, slides, practical assignments).
                             </p>
                         </div>
                 </div>
@@ -549,11 +544,28 @@
         </section><!-- #faq close -->
         
         <!-- 
+        Venue start
+        ==================== -->
+        <section id="venue" class="section">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="heading">
+                        <h2>Venue</h2>
+                    </div>
+                    <div class="block">
+                        <p>The School will be held at the <a href="http://soglasiehall.ru/">Soglasie Hall</a> at Prospekt Mira, 36, Moskva.</p>
+                        <p><img src="images/map.png" /></p>
+                    </div>
+                </div>
+            </div><!-- .container close -->
+        </section><!-- #contacts close -->
+        
+        <!-- 
         Contacts start
         ==================== -->
         <section id="contact" class="section">
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <div class="heading">
                         <h2>Contact</h2>
                     </div>
