Removed the link to the Soglasie hall

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                         <h2>Venue</h2>
                     </div>
                     <div class="block">
-                        <p>The School will be held at the <a href="http://soglasiehall.ru/">Soglasie Hall</a> at Prospekt Mira, 36, Moskva.</p>
+                        <p>The School will be held at the Soglasie Hall at Prospekt Mira, 36, Moskva.</p>
                         <p><img src="images/map.png" /></p>
                     </div>
                 </div>
