--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <h2>Invited Speakers</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-3 col-md-3">
                         <div class="photo">
                             <img src="photos/welling.jpg" />
                         </div>
@@ -248,7 +248,7 @@
                             <span class="job-affiliation">University of Amsterdam</span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-3 col-md-3">
                         <div class="photo">
                             <img src="photos/filippone.jpg" />
                         </div>
@@ -257,13 +257,22 @@
                            <span class="job-affiliation">EURECOM</span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-3 col-md-3">
                         <div class="photo">
                             <img src="photos/achille.jpg" />
                         </div>
                         <div class="info">
                            <span class="speaker-name"><a href="http://vision.ucla.edu/~alex/">Alessandro Achille</a></span><br/>
                            <span class="job-affiliation">University of California, Los Angeles</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="photo">
+                            <img src="photos/bartunov.jpg" />
+                        </div>
+                        <div class="info">
+                           <span class="speaker-name">Sergey Bartunov</span><br/>
+                           <span class="job-affiliation">DeepMind</span>
                         </div>
                     </div>
                 </div>
