Retina-ready map + link to google maps

--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
                         <h2>Venue</h2>
                     </div>
                     <div class="block">
-                        <p>The School will be held at the Soglasie Hall at Prospekt Mira, 36, Moskva.</p>
-                        <p><img src="images/map.png" /></p>
+                        <p>The School will be held at the Soglasie Hall at <a href="https://goo.gl/maps/DrRmorEA4852">Prospekt Mira, 36, Moscow</a>.</p>
+                        <p><img src="images/map.png" style="width:800px"/></p>
                     </div>
                 </div>
             </div><!-- .container close -->
