More people + updated logos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="organizer">
                             <h5>Organized by</h5>
                             <div class="logo-box">
-                                <a href="https://hse.ru/"><img src="images/hse.png" /></a>
+                                <a href="https://hse.ru/"><img src="images/hse.png" width="150" /></a>
                             </div>
 
                             <hr/>
@@ -353,6 +353,24 @@
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/sobolev.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://artem.sobolev.name/">Artem Sobolev</a></span><br/>
+                            Research Scientist, <span class="job-affiliation">Samsung AI Center</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/grishin.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name">Alexander Grishin</span><br/>
+                            <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="sub-heading">
@@ -413,6 +431,41 @@
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/kapushev.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://faculty.skoltech.ru/people/yermekkapushev">Yermek Kapushev</a></span><br/>
+                            PhD student, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/zaitsev.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://faculty.skoltech.ru/people/alexeizaitsev">Alexey Zaytsev</a></span><br/>
+                            PhD student, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/chirkova.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191576735">Nadezhda Chirkova</a></span><br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/zakharov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name">Egor Zakharov</span><br/>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="sub-heading">
@@ -453,15 +506,6 @@
                         <div class="info">
                             <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/216971953">Ekaterina Volzhenina</a></span><br/>
                             <span class="job-affiliation">Organization Manager</span>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-2">
-                        <div class="photo">
-                            <img src="photos/sobolev.jpg" />
-                        </div>
-                        <div class="info">
-                            <span class="speaker-name">Artem Sobolev</span><br/>
-                            <span class="job-affiliation">Random Stuff</span>
                         </div>
                     </div>
                 </div>
