Added Fritsler, and minor fixes

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Alexander Grishin</span><br/>
-                            <span class="job-affiliation">Higher School of Economics</span>
+                            <span class="job-title">Junior Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
                 </div>
@@ -455,7 +455,16 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191576735">Nadezhda Chirkova</a></span><br/>
-                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                            <span class="job-title">Junior Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/fritsler.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name">Alexander Fritsler</span><br/>
+                            <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -464,6 +473,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Egor Zakharov</span><br/>
+                            <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
                 </div>
@@ -472,7 +482,7 @@
                     <h2>Organizing Committee</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-2">
+                    <div class="col-sm-6 col-md-3">
                         <div class="photo">
                             <img src="photos/vetrov.jpg" />
                         </div>
@@ -487,16 +497,16 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191576735">Nadezhda Chirkova</a></span><br/>
-                            <span class="job-affiliation">Organization Manager</span>
+                            Organization Manager
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-2">
+                    <div class="col-sm-6 col-md-3">
                         <div class="photo">
                             <img src="photos/lobacheva.jpg" />
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/131072080">Ekaterina Lobacheva</a></span><br/>
-                            <span class="job-affiliation">Organization Manager</span>
+                            Organization Manager
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -505,7 +515,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/216971953">Ekaterina Volzhenina</a></span><br/>
-                            <span class="job-affiliation">Organization Manager</span>
+                            Organization Manager
                         </div>
                     </div>
                 </div>
