Updated Samsung link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <hr/>
 
                             <div class="logo-box">
-                                <a href="http://research.samsung.com/srr"><img src="images/samsung.png" /></a>
+                                <a href="https://research.samsung.com/aicenter_moscow"><img src="images/samsung.png" /></a>
                             </div>
                             <div class="caption">
                                 <p>Samsung AI Center in Moscow</p>
