Make venue map a link + set max-width

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                     </div>
                     <div class="block">
                         <p>The School will be held at the Soglasie Hall at <a href="https://goo.gl/maps/DrRmorEA4852">Prospekt Mira, 36, Moscow</a>.</p>
-                        <p><img src="images/map.png" style="width:800px"/></p>
+                        <p><a href="images/map.png"><img src="images/map.png" style="width:800px; max-width:100%" /></a></p>
                     </div>
                 </div>
             </div><!-- .container close -->
