--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 	                <ul class="nav navbar-nav navbar-right" id="top-nav">
 	                    <li><a href="./2017/"><strong>Deep|Bayes 2017</strong></a></li>
 	                    <li><a href="#about">About</a></li>
+	                    <li><a href="#materials">Materials</a></li>
 	                    <li><a href="#schedule">Program</a></li>
 	                    <li><a href="#speakers">People</a></li>
-	                    <li><a href="#materials">Materials</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#venue">Venue</a></li>
 	                    <li><a href="#contact">Contact</a></li>
@@ -195,6 +195,24 @@
                 
             </div>
         </section><!-- #about close -->
+
+        <section id="materials" class="section">
+            <div class="container">
+                <div class="row text-center">
+                        <div class="heading">
+                            <h2>School Materials</h2>
+                        </div>
+                        <div class="block">
+                            <p>
+                            Videos, slides and practical assignments are available online:
+                            </p>
+                            <a href="https://www.youtube.com/playlist?list=PLe5rNUydzV9Q01vWCP9BV7NhJG3j7mz62" target="_blank" class="btn btn-default btn-home">Videos</a>
+                            <a href="https://drive.google.com/drive/folders/1rJ-HTN3sNTvhJXPoXEEhfGlZWtjNY26C?usp=sharing" target="_blank" class="btn btn-default btn-home">Slides</a>
+                            <a href="https://github.com/bayesgroup/deepbayes-2018" target="_blank" class="btn btn-default btn-home">Assignments</a>
+                        </div>
+                </div>
+            </div>
+        </section><!-- #materials close -->
         
         <section id="schedule" class="section">
             <div class="container">
@@ -519,25 +537,6 @@
             </div>
             </div>
         </section><!-- #speakers close -->
-
-
-        <section id="materials" class="section">
-            <div class="container">
-                <div class="row text-center">
-                        <div class="heading">
-                            <h2>School Materials</h2>
-                        </div>
-                        <div class="block">
-                            <p>
-                            Videos, slides and practical assignments are available online:
-                            </p>
-                            <a href="https://www.youtube.com/playlist?list=PLe5rNUydzV9Q01vWCP9BV7NhJG3j7mz62" target="_blank" class="btn btn-default btn-home">Videos</a>
-                            <a href="https://drive.google.com/drive/folders/1rJ-HTN3sNTvhJXPoXEEhfGlZWtjNY26C?usp=sharing" target="_blank" class="btn btn-default btn-home">Slides</a>
-                            <a href="https://github.com/bayesgroup/deepbayes-2018" target="_blank" class="btn btn-default btn-home">Assignments</a>
-                        </div>
-                </div>
-            </div>
-        </section><!-- #call-to-action close -->
 	
         <!-- 
         faq start
